[package]
name = "osc94"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "Library for handling progress bar sequences (OSC 9;4)."
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/osc94"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]

[[bin]]
name = "osc94"
required-features = ["cli"]

[features]
cli = []

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
